--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         const mainEl = document.getElementById("main");
         /* STARTING program */
         loadAllData();
-        updateUIHGroupList();
+        // updateUIHGroupList();   // remains to be seen if I need this (more details inside "helperFunctions.js - function updateUihGroupList")
         renderNavBar(navigationEl);
         renderResetAndUndoResetBtns(otherStuffEl);
         renderPlayersTable(mainEl);
