--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         // updateUIHGroupList();   // remains to be seen if I need this (more details inside "helperFunctions.js - function updateUihGroupList")
         renderNavBar(navigationEl);
         renderResetAndUndoResetBtns(otherStuffEl);
-        renderImportLSBtn(otherStuff2El);
+        // renderImportLSBtn(otherStuff2El);
         renderPlayersTable(mainEl, true);                                   // on refresh page
         renderUIHGroupsTable(uihGoalsEl, true);                             // on refresh page
         renderSeatsTop10or30Table(remainingSeatsTop10El, "top 10", true);   // on refresh page
